# linked

./: .gitignore  CMakeLists.txt  README.md
linked/: linked.cpp  linked.h
tests/: README.md  tests.cpp
